# Encoder

./: CMakeLists.txt  instructions.md  test.sh
src/: CMakeLists.txt  decode.cpp  decoder.cpp  decoder.hpp  encode.cpp  encoder.cpp  encoder.hpp  encodingBuffer.cpp  encodingBuffer.hpp
test/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp  encodingBuffer_test.cpp
